# mingo

./: .beans.yml  .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  genesis.wire
.beans/: mingo-02ta--enable-a-live-checkpoint-attestor-t2-attest-end-to.md  mingo-0hzq--epic-fast-trustless-sync-checkpoints-snapshots-dis.md  mingo-0jkl--expand-sbo-uri-commands-object-moveadmin-authority.md  mingo-0vkj--t24-client-fast-sync-snapshotcheckpoint-bootstrap.md  mingo-1c6v--browserid-primary-auth-creates-orphan-per-email-ac.md  mingo-1gi3--mempool-phase-c-ssewebsocket-push-for-pendingconfi.md  mingo-1o7t--deleted-post-lingers-in-pending-state-never-clears.md  mingo-1pxk--sandmillorg-browserid-browserid-record-dnssec-on-c.md  mingo-2nra--bump-mingo-sbo-core-pin-a92886c-b6ac8ba-to-match-t.md  mingo-2rbx--phase-4-foreign-domain-identities-on-chain-federat.md  mingo-2xnj--domain-self-cert-end-to-end-daemon-test.md  mingo-3f3i--mingo-poster-agent-delegated-server-side-signing-m.md  mingo-3go6--author-delete-users-delete-their-own-postscomments.md  mingo-3kyo--followup-checkpointer-as-email-identity-warrant-dr.md  mingo-3mhi--admin-danmillssandmillorg-email-rooted-admin-live.md  mingo-3sle--emit-sysdnssecdomain-in-mingo-genesis-automate-dns.md  mingo-46oy--uri-getlistpost-cli-commands.md  mingo-4jqo--rework-mingo-identity-ux-separate-registration-fro.md  mingo-4p82--speed-up-deploys-pin-base-image-parallelize.md  mingo-4rvr--wipe-regenesis-drop-the-synthetic-corpus.md  mingo-5guy--mingo-session-hygiene-no-ttl-logout-only-clears-cu.md  mingo-5zru--state-root-sboq-proofs-under-rpc-only-sync.md  mingo-6phv--moderation-real-delete-from-head-retained-in-histo.md  mingo-6tsc--poster-enable-polish-freeze-modal-on-return-from-c.md  mingo-7aou--design-refresh.md  mingo-8724--t23-sync-point-discovery-manifest-daemon-get-v1syn.md  mingo-8gau--trustless-fast-sync-verifier-verify-signed-checkpo.md  mingo-8vec--push-browserid-ng-broker-commits-to-origin.md  mingo-9vck--audit-sys-lookups-for-hardcoded-creator-genesis-mo.md  mingo-a9uj--browserid-ng-primaryexisting-email-wrongly-routed.md  mingo-acmx--idp-admin-authed-programmatic-accountcert-provisio.md  mingo-b0y5--spec-edits-state-commitment-checkpointssnapshotsat.md  mingo-b2yz--seed-data-lived-in-demo-corpus-mingo-seed.md  mingo-b763--auth-evidence-rrsig-refresh-for-mingoplace-writes.md  mingo-blpo--attestor-build-attestation-wire-sets-ownernone-att.md  mingo-c70r--browseridme-dokku-app-id-has-no-persistent-storage.md  mingo-c9ci--sbo-self-authorizing-sysdnssecdomain-writes-via-a.md  mingo-ca71--rolesadmin-bare-name-never-matches-sysmingoplace-u.md  mingo-chfi--t21-checkpoint-publishing-daemon-dual-trigger-sign.md  mingo-chzb--passport-implement-with-vouch-badges-surfaced.md  (+53 more)
.github/workflows/: deploy-daemon.yml
deploy/: GENESIS.md
deploy/mingo/: Dockerfile
deploy/sbo-daemon/: Dockerfile  config.toml  entrypoint.sh
docs/notes/: browserid-for-agents-handoff.md
docs/plans/: 2026-06-28-deployment-handoff.md  2026-06-28-u-layout-migration-runbook.md  2026-06-29-dnssec-self-authorizing-handoff.md  2026-06-29-session-handoff.md  2026-07-09-agent-native-attestor-plan.md
mingo-app/: Cargo.toml
mingo-app/examples/: two_writer_collision.rs
mingo-app/src/: appoint.rs  community.rs  device_login.rs  genesis.rs  lib.rs  livetest.rs  login.rs  seed.rs  seed_corpus.json  set_root_admin.rs
mingo-idp/: Cargo.toml  README.md
mingo-idp/src/: agent.rs  config.rs  device.rs  lib.rs  main.rs  poster.rs  routes.rs  store.rs  verify.rs
mingo-idp/static/: auth.js  device-authorize.html  provision.js  provisioning_api.js
mingo-idp/tests/: agent_device_cert.rs  agent_provisioning_e2e.rs  device_cert_e2e.rs  poster_endpoints.rs
mingo-web/: app.js  index.html  style.css
