[workspace]
resolver = "2"
members = ["mingo-idp", "mingo-app"]

# Incremental release builds. Cargo only ever compiles *workspace* crates
# incrementally (never registry/git deps), so this is cache-safe: it does NOT
# change the fingerprint of the sbo crates or rocksdb, and combined with the
# deploy's persisted BuildKit target/ cache mount it makes redeploys recompile
# only the changed codegen units of our own crates.
[profile.release]
incremental = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vthunder/mingo"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# The application-agnostic SBO reference implementation lives in vthunder/sbo.
# Pinned git dependency (bump the rev to adopt SBO changes); mingo's forum layer
# (mingo-app) builds on top of it.
sbo-core = { git = "https://github.com/vthunder/sbo", rev = "55314e9", default-features = false }
