[package]
name = "mingo-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mingo forum-application layer atop the application-agnostic SBO reference impl (community.v1 schema + aggregated genesis)"

[lib]
name = "mingo_app"
path = "src/lib.rs"

[[bin]]
name = "mingo"
path = "src/bin/mingo.rs"

[dependencies]
sbo-core.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
clap.workspace = true
anyhow.workspace = true
# For the `seed` subcommand's live mode (provision + submit) — mirrors mingo-idp.
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
