[package]
name = "mingo-idp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "mingo.place primary BrowserID IdP — issues <handle>@mingo.place certs"

[lib]
name = "mingo_idp"
path = "src/lib.rs"

[[bin]]
name = "mingo-idp"
path = "src/main.rs"

[dependencies]
# BrowserID protocol primitives (certificate signing, assertion verify, discovery).
# Pinned git dependency on browserid-ng (e572cda = external warrant requests:
# ProvisioningRequest::warrant_external + ExternalWarrantRequest, for mingo-poster).
browserid-core = { git = "https://github.com/vthunder/browserid-ng", rev = "e572cda" }

# SBO reference impl — server-side agent-write assembly (Message/wire) + the
# authorize/attribution helpers. Shares the workspace rev (the deployed daemon's).
# Pure build/verify surface only (message/wire/presets/crypto/authorize); the
# rocksdb-backed state store is off workspace-wide (default-features = false in
# the root manifest — no member needs it), keeping the rocksdb/bindgen/libclang
# chain out of the build.
sbo-core.workspace = true

tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-cookies = "0.10"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
